--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Meu Aniversário</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Configuração geral do corpo da página */
         body {
             font-family: 'Poppins', sans-serif;
             color: white;
@@ -16,7 +15,6 @@
             background: #2597b5;
         }
 
-        /* Primeira imagem centralizada */
         #event-image {
             width: 100%;
             max-width: 600px;
@@ -25,29 +23,28 @@
             border-radius: 15px;
         }
 
-        /* Container para a segunda imagem e os botões */
         .image-and-buttons-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             margin: 30px;
+            flex-wrap: wrap;
         }
 
-        /* Segunda imagem com largura de 1100px */
         #second-image {
-            width: 1100px;
+            width: 100%;
+            max-width: 1100px;
             display: block;
             border-radius: 15px;
         }
 
-        /* Botões empilhados à direita da segunda imagem */
         .attractions-food-location-buttons {
             display: flex;
-            flex-direction: column; /* Coloca os botões em coluna */
-            gap: 10px; /* Diminui o espaço entre os botões */
-            width: 200px; /* Tamanho fixo para os botões */
+            flex-direction: column;
+            gap: 10px;
+            width: 200px;
             text-align: center;
-            margin-left: 20px; /* Aproxima os botões da imagem */
+            margin-left: 20px;
         }
 
         .attractions-food-location-buttons a {
@@ -65,12 +62,12 @@
             background: #e86c50;
         }
 
-        /* Contagem regressiva e Confirmação de presença */
         .countdown-container {
             display: flex;
             justify-content: center;
             gap: 30px;
             margin: 30px;
+            flex-wrap: wrap;
         }
 
         #countdown, #rsvp {
@@ -78,7 +75,8 @@
             padding: 40px;
             border-radius: 15px;
             backdrop-filter: blur(10px);
-            width: 45%;
+            width: 100%;
+            max-width: 400px;
         }
 
         #timer {
@@ -92,9 +90,9 @@
             border: none;
             border-radius: 8px;
             font-size: 1.2em;
-            width: 100%; /* Garante que os inputs ocupem 100% da largura disponível */
-            max-width: 300px; /* Limita a largura máxima dos campos de input */
-            box-sizing: border-box; /* Inclui o padding e a borda no cálculo do tamanho */
+            width: 100%;
+            max-width: 300px;
+            box-sizing: border-box;
         }
 
         button {
@@ -114,18 +112,30 @@
             background: rgba(0, 0, 0, 0.7);
             margin-top: 40px;
         }
+
+        @media (max-width: 768px) {
+            .image-and-buttons-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .attractions-food-location-buttons {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+
+            .countdown-container {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
     </style>
 </head>
 <body>
-    <!-- Primeira imagem centralizada -->
     <img id="event-image" src="-Aniversario-do-lucas-e-otavi-30-03-2025.png" alt="Aniversário Lucas e Otávio">
 
-    <!-- Segunda imagem e os botões -->
     <div class="image-and-buttons-container">
-        <!-- Segunda imagem com largura de 1100px -->
         <img id="second-image" src="discurso.png" alt="Imagem do Evento">
-
-        <!-- Botões empilhados com menos espaço -->
         <div class="attractions-food-location-buttons">
             <a href="atrações.html">Confira as Atrações</a>
             <a href="comidas.html">Confira as Comidas</a>
@@ -133,15 +143,11 @@
         </div>
     </div>
 
-    <!-- Contagem regressiva e confirmação de presença -->
     <div class="countdown-container">
-        <!-- Contagem regressiva -->
         <section id="countdown">
             <h2>Faltam</h2>
             <div id="timer">00d 00h 00m 00s</div>
         </section>
-
-        <!-- Formulário de confirmação de presença -->
         <section id="rsvp">
             <h2>Confirme sua Presença</h2>
             <form id="rsvp-form">
@@ -157,9 +163,8 @@
     </footer>
 
     <script>
-        // Atualizando a contagem regressiva para o evento
         function updateCountdown() {
-            const eventDate = new Date('September 13, 2025 18:00:00').getTime(); // Data do evento
+            const eventDate = new Date('September 13, 2025 18:00:00').getTime();
             const now = new Date().getTime();
             const timeRemaining = eventDate - now;
 
@@ -178,11 +183,10 @@
         setInterval(updateCountdown, 1000);
         updateCountdown();
 
-        // Função para confirmar presença
         document.getElementById('rsvp-form').addEventListener('submit', function(event) {
-            event.preventDefault(); // Impede o envio do formulário
+            event.preventDefault();
             alert('Sua presença foi confirmada! Nos vemos na festa!');
-            document.getElementById('rsvp-form').reset(); // Limpa o formulário após o envio
+            document.getElementById('rsvp-form').reset();
         });
     </script>
 </body>
