--- a/localizacao.html
+++ b/localizacao.html
@@ -73,6 +73,8 @@
     </style>
 </head>
 <body>
+    <img id="event-image" src="-Aniversario-do-lucas-e-otavi-30-03-2025.png" alt="Aniversário Lucas e Otávio">
+    
     <header>
         <h1>Localização do Evento</h1>
     </header>
