--- a/localizacao.html
+++ b/localizacao.html
@@ -70,6 +70,14 @@
         .back-button a:hover {
             background: #e86c50;
         }
+
+        #event-image {
+            width: 100%;
+            max-width: 900px;
+            display: block;
+            margin: 30px auto;
+            border-radius: 19px;
+        }
     </style>
 </head>
 <body>
