--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         }
 
         #event-image {
-            width: 100%;
+            width: 90%;
             max-width: 600px;
             display: block;
-            margin: 30px auto;
+            margin: 20px auto;
             border-radius: 15px;
         }
 
@@ -27,12 +27,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 30px;
+            margin: 20px;
             flex-wrap: wrap;
         }
 
         #second-image {
-            width: 100%;
+            width: 90%;
             max-width: 1100px;
             display: block;
             border-radius: 15px;
@@ -42,14 +42,15 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            width: 200px;
+            width: 100%;
+            max-width: 250px;
             text-align: center;
-            margin-left: 20px;
+            margin-top: 20px;
         }
 
         .attractions-food-location-buttons a {
             display: inline-block;
-            padding: 15px;
+            padding: 12px;
             background: #ff7e5f;
             color: white;
             text-decoration: none;
@@ -65,33 +66,33 @@
         .countdown-container {
             display: flex;
             justify-content: center;
-            gap: 30px;
-            margin: 30px;
+            gap: 20px;
+            margin: 20px;
             flex-wrap: wrap;
         }
 
         #countdown, #rsvp {
             background: rgba(255, 255, 255, 0.2);
-            padding: 40px;
+            padding: 30px;
             border-radius: 15px;
             backdrop-filter: blur(10px);
-            width: 100%;
+            width: 90%;
             max-width: 400px;
         }
 
         #timer {
-            font-size: 2.5em;
+            font-size: 2em;
             font-weight: bold;
         }
 
         input, button {
-            padding: 15px;
+            padding: 12px;
             margin: 10px 0;
             border: none;
             border-radius: 8px;
-            font-size: 1.2em;
+            font-size: 1em;
             width: 100%;
-            max-width: 300px;
+            max-width: 280px;
             box-sizing: border-box;
         }
 
@@ -110,17 +111,17 @@
         footer {
             padding: 20px;
             background: rgba(0, 0, 0, 0.7);
-            margin-top: 40px;
+            margin-top: 30px;
         }
 
         #confirmation-message {
             display: none;
-            margin-top: 20px;
-            padding: 15px;
+            margin-top: 15px;
+            padding: 10px;
             background: #28a745;
             color: white;
             border-radius: 10px;
-            font-size: 1.2em;
+            font-size: 1em;
             font-weight: bold;
         }
 
@@ -128,11 +129,6 @@
             .image-and-buttons-container {
                 flex-direction: column;
                 align-items: center;
-            }
-
-            .attractions-food-location-buttons {
-                margin-left: 0;
-                margin-top: 20px;
             }
 
             .countdown-container {
@@ -151,7 +147,6 @@
             <a href="atrações.html">Confira as Atrações</a>
             <a href="comidas.html">Confira as Comidas</a>
             <a href="localizacao.html">Confira a Localização</a>
-            <a href="confirmados.html">Ver Confirmados</a>
         </div>
     </div>
 
@@ -168,6 +163,7 @@
                 <button type="submit">Confirmar</button>
             </form>
             <div id="confirmation-message">Presença confirmada! Nos vemos na festa! 🎉</div>
+            <a href="confirmados.html" style="display: inline-block; margin-top: 15px; padding: 12px; background: #ff7e5f; color: white; text-decoration: none; font-weight: bold; border-radius: 10px; transition: 0.3s;">Ver Confirmados</a>
         </section>
     </div>
 
@@ -176,6 +172,13 @@
     </footer>
 
     <script>
+        document.getElementById("rsvp-form").addEventListener("submit", function(event) {
+            event.preventDefault(); // Evita o recarregamento da página
+            document.getElementById("confirmation-message").style.display = "block";
+            document.getElementById("name").value = "";
+            document.getElementById("email").value = "";
+        });
+
         function updateCountdown() {
             const eventDate = new Date('September 13, 2025 18:00:00').getTime();
             const now = new Date().getTime();
@@ -190,18 +193,6 @@
         }
         setInterval(updateCountdown, 1000);
         updateCountdown();
-
-        document.getElementById('rsvp-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const name = document.getElementById('name').value;
-            if (name) {
-                let confirmedGuests = JSON.parse(localStorage.getItem('confirmedGuests')) || [];
-                confirmedGuests.push(name);
-                localStorage.setItem('confirmedGuests', JSON.stringify(confirmedGuests));
-            }
-            document.getElementById('confirmation-message').style.display = 'block';
-            document.getElementById('rsvp-form').reset();
-        });
     </script>
 </body>
 </html>
