--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: #2597b5;
+            background: #54d1da;
         }
 
         #event-image {
@@ -51,7 +51,7 @@
         .attractions-food-location-buttons a {
             display: inline-block;
             padding: 12px;
-            background: #ff7e5f;
+            background: #dd3e16;
             color: white;
             text-decoration: none;
             font-weight: bold;
@@ -97,7 +97,7 @@
         }
 
         button {
-            background: #ff7e5f;
+            background: #dd3e16;
             color: white;
             cursor: pointer;
             font-weight: bold;
@@ -123,6 +123,9 @@
             border-radius: 10px;
             font-size: 1em;
             font-weight: bold;
+            max-width: 250px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         @media (max-width: 768px) {
@@ -139,14 +142,13 @@
     </style>
 </head>
 <body>
-    <img id="event-image" src="-Aniversario-do-lucas-e-otavi-30-03-2025.png" alt="Aniversário Lucas e Otávio">
+    <img id="event-image" src="titulo.png" alt="Aniversário Lucas e Otávio">
 
     <div class="image-and-buttons-container">
-        <img id="second-image" src="discurso.png" alt="Imagem do Evento">
+        <img id="second-image" src="texto.png" alt="Imagem do Evento">
         <div class="attractions-food-location-buttons">
-            <a href="atrações.html">Confira as Atrações</a>
-            <a href="comidas.html">Confira as Comidas</a>
-            <a href="localizacao.html">Confira a Localização</a>
+            <a href="atrações.html">Atrações</a>
+            <a href="localizacao.html">Localização</a>
         </div>
     </div>
 
@@ -159,11 +161,10 @@
             <h2>Confirme sua Presença</h2>
             <form id="rsvp-form">
                 <input type="text" id="name" placeholder="Seu Nome" required>
-                <input type="email" id="email" placeholder="Seu E-mail" required>
                 <button type="submit">Confirmar</button>
             </form>
             <div id="confirmation-message">Presença confirmada! Nos vemos na festa! 🎉</div>
-            <a href="confirmados.html" style="display: inline-block; margin-top: 15px; padding: 12px; background: #ff7e5f; color: white; text-decoration: none; font-weight: bold; border-radius: 10px; transition: 0.3s;">Ver Confirmados</a>
+            <a href="confirmados.html" style="display: inline-block; margin-top: 15px; padding: 12px; background: #dd3e16; color: white; text-decoration: none; font-weight: bold; border-radius: 10px; transition: 0.3s;">Ver Confirmados</a>
         </section>
     </div>
 
@@ -173,14 +174,23 @@
 
     <script>
         document.getElementById("rsvp-form").addEventListener("submit", function(event) {
-            event.preventDefault(); // Evita o recarregamento da página
-            document.getElementById("confirmation-message").style.display = "block";
-            document.getElementById("name").value = "";
-            document.getElementById("email").value = "";
+            event.preventDefault();
+
+            let name = document.getElementById("name").value.trim();
+            if (name) {
+                // Pega lista existente ou cria uma nova
+                let confirmedGuests = JSON.parse(localStorage.getItem('confirmedGuests')) || [];
+                confirmedGuests.push(name);
+                localStorage.setItem('confirmedGuests', JSON.stringify(confirmedGuests));
+
+                // Mostra mensagem de confirmação
+                document.getElementById("confirmation-message").style.display = "block";
+                document.getElementById("name").value = "";
+            }
         });
 
         function updateCountdown() {
-            const eventDate = new Date('September 13, 2025 18:00:00').getTime();
+            const eventDate = new Date('October 04, 2025 16:00:00').getTime();
             const now = new Date().getTime();
             const timeRemaining = eventDate - now;
 
