--- a/confirmados.html
+++ b/confirmados.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Poppins', sans-serif;
             text-align: center;
-            background: #2597b5;
+            background: #54d1da;
             color: white;
             margin: 0;
             padding: 20px;
