--- a/confirmados.html
+++ b/confirmados.html
@@ -3,206 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Aniversário</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Confirmados</title>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            color: white;
             text-align: center;
-            margin: 0;
-            padding: 0;
             background: #54d1da;
-        }
-
-        #event-image {
-            width: 90%;
-            max-width: 600px;
-            display: block;
-            margin: 20px auto;
-            border-radius: 15px;
-        }
-
-        .image-and-buttons-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 20px;
-            flex-wrap: wrap;
-        }
-
-        #second-image {
-            width: 90%;
-            max-width: 1100px;
-            display: block;
-            border-radius: 15px;
-        }
-
-        .attractions-food-location-buttons {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            width: 100%;
-            max-width: 250px;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .attractions-food-location-buttons a {
-            display: inline-block;
-            padding: 12px;
-            background: #dd3e16;
             color: white;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 10px;
-            transition: 0.3s;
-        }
-
-        .attractions-food-location-buttons a:hover {
-            background: #e86c50;
-        }
-
-        .countdown-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px;
-            flex-wrap: wrap;
-        }
-
-        #countdown, #rsvp {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 30px;
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            width: 90%;
-            max-width: 400px;
-        }
-
-        #timer {
-            font-size: 2em;
-            font-weight: bold;
-        }
-
-        input, button {
-            padding: 12px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            width: 100%;
-            max-width: 280px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background: #dd3e16;
-            color: white;
-            cursor: pointer;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-
-        button:hover {
-            background: #e86c50;
-        }
-
-        footer {
+            margin: 0;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            margin-top: 30px;
         }
-
+        #confirmed-list {
+            background: rgba(255, 255, 255, 0.2);
+            padding: 15px;
+            border-radius: 10px;
+            max-width: 300px;
+            margin: 20px auto;
+            backdrop-filter: blur(10px);
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            background: rgba(255, 255, 255, 0.3);
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 5px;
+        }
+        a {
+            display: block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            background: #ff7e5f;
+            padding: 8px;
+            border-radius: 5px;
+            max-width: 200px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        a:hover {
+            background: #e86c50;
+        }
         #confirmation-message {
             display: none;
             margin-top: 15px;
-            padding: 10px;
+            padding: 8px;
             background: #28a745;
             color: white;
             border-radius: 10px;
-            font-size: 1em;
+            font-size: 0.9em;
             font-weight: bold;
             max-width: 250px;
             margin-left: auto;
             margin-right: auto;
         }
-
-        @media (max-width: 768px) {
-            .image-and-buttons-container {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .countdown-container {
-                flex-direction: column;
-                align-items: center;
-            }
-        }
     </style>
 </head>
 <body>
-    <img id="event-image" src="titulo.png" alt="Aniversário Lucas e Otávio">
-
-    <div class="image-and-buttons-container">
-        <img id="second-image" src="texto.png" alt="Imagem do Evento">
-        <div class="attractions-food-location-buttons">
-            <a href="atrações.html">Atrações</a>
-            <a href="localizacao.html">Localização</a>
-        </div>
+    <h1>Lista de Confirmados</h1>
+    <div id="confirmed-list">
+        <ul id="guest-list"></ul>
     </div>
-
-    <div class="countdown-container">
-        <section id="countdown">
-            <h2>Faltam</h2>
-            <div id="timer">00d 00h 00m 00s</div>
-        </section>
-        <section id="rsvp">
-            <h2>Confirme sua Presença</h2>
-            <form id="rsvp-form">
-                <input type="text" id="name" placeholder="Seu Nome" required>
-                <button type="submit">Confirmar</button>
-            </form>
-            <div id="confirmation-message">Presença confirmada! Nos vemos na festa! 🎉</div>
-            <a href="confirmados.html" style="display: inline-block; margin-top: 15px; padding: 12px; background: #dd3e16; color: white; text-decoration: none; font-weight: bold; border-radius: 10px; transition: 0.3s;">Ver Confirmados</a>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Meu Aniversário. Todos os direitos reservados.</p>
-    </footer>
-
+    <div id="confirmation-message">Presença confirmada! Nos vemos na festa! 🎉</div>
+    <a href="index.html">Voltar</a>
+    
     <script>
-        document.getElementById("rsvp-form").addEventListener("submit", function(event) {
-            event.preventDefault();
-
-            let name = document.getElementById("name").value.trim();
-            if (name) {
-                // Pega lista existente ou cria uma nova
-                let confirmedGuests = JSON.parse(localStorage.getItem('confirmedGuests')) || [];
-                confirmedGuests.push(name);
-                localStorage.setItem('confirmedGuests', JSON.stringify(confirmedGuests));
-
-                // Mostra mensagem de confirmação
-                document.getElementById("confirmation-message").style.display = "block";
-                document.getElementById("name").value = "";
+        document.addEventListener("DOMContentLoaded", function() {
+            let confirmedGuests = JSON.parse(localStorage.getItem('confirmedGuests')) || [];
+            let guestList = document.getElementById('guest-list');
+            let confirmationMessage = document.getElementById('confirmation-message');
+            
+            if (confirmedGuests.length === 0) {
+                guestList.innerHTML = "<p>Ninguém confirmou presença ainda.</p>";
+            } else {
+                confirmedGuests.forEach(guest => {
+                    let li = document.createElement('li');
+                    li.textContent = guest;
+                    guestList.appendChild(li);
+                });
+                confirmationMessage.style.display = 'block';
             }
         });
-
-        function updateCountdown() {
-            const eventDate = new Date('October 04, 2025 16:00:00').getTime();
-            const now = new Date().getTime();
-            const timeRemaining = eventDate - now;
-
-            const days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
-
-            document.getElementById('timer').innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
-        }
-        setInterval(updateCountdown, 1000);
-        updateCountdown();
     </script>
 </body>
 </html>
