--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         #event-image {
-            width: 90%;
+            width: 110%;
             max-width: 600px;
             display: block;
             margin: 20px auto;
@@ -32,7 +32,7 @@
         }
 
         #second-image {
-            width: 90%;
+            width: 130%;
             max-width: 1100px;
             display: block;
             border-radius: 15px;
@@ -42,10 +42,10 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            width: 100%;
-            max-width: 250px;
+            width: 130%;
+            max-width: 270px;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 25px;
         }
 
         .attractions-food-location-buttons a {
@@ -149,6 +149,7 @@
         <div class="attractions-food-location-buttons">
             <a href="atrações.html">Atrações</a>
             <a href="localizacao.html">Localização</a>
+            <a href="presente.html">Sugestão de presente</a>
         </div>
     </div>
 
@@ -157,41 +158,10 @@
             <h2>Faltam</h2>
             <div id="timer">00d 00h 00m 00s</div>
         </section>
-        <section id="rsvp">
-            <h2>Confirme sua Presença</h2>
-            <input type="text" id="nome" placeholder="Digite seu nome" />
-            <button onclick="confirmarPresenca()">Confirmar presença</button>
-            <div id="confirmation-message">Presença confirmada! Nos vemos na festa! 🎉</div>
-            <a href="confirmados.html" style="display: inline-block; margin-top: 15px; padding: 12px; background: #dd3e16; color: white; text-decoration: none; font-weight: bold; border-radius: 10px; transition: 0.3s;">Ver Confirmados</a>
-        </section>
+
     </div>
-
-    <footer>
-        <p>&copy; 2025 Meu Aniversário. Todos os direitos reservados.</p>
-    </footer>
-
     <script>
-        function confirmarPresenca() {
-            let nome = document.getElementById("nome").value.trim();
-            if (nome === "") {
-                alert("Por favor, digite seu nome.");
-                return;
-            }
-
-            // Usa a mesma chave 'confirmedGuests' para salvar e acessar na outra página
-            let confirmados = JSON.parse(localStorage.getItem("confirmedGuests")) || [];
-
-            // Evita duplicar nomes
-            if (!confirmados.includes(nome)) {
-                confirmados.push(nome);
-                localStorage.setItem("confirmedGuests", JSON.stringify(confirmados));
-            }
-
-            document.getElementById("confirmation-message").style.display = "block";
-            document.getElementById("nome").value = "";
-        }
-
-        function updateCountdown() {
+      function updateCountdown() {
             const eventDate = new Date('October 04, 2025 16:00:00').getTime();
             const now = new Date().getTime();
             const timeRemaining = eventDate - now;
