--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
     <div class="image-and-buttons-container">
         <img id="second-image" src="texto.png" alt="Imagem do Evento" />
         <div class="attractions-food-location-buttons">
-            <a href="atrações.html">Atrações</a>
             <a href="localizacao.html">Localização</a>
             <a href="presente.html">Sugestão de presente</a>
+            <a href="fotos.html">Fotos</a>
         </div>
     </div>
 
