--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <p class="subtitle">Acesse o edital completo, e acompanhe tudo sobre a vaga</p>
       <div class="actions">
         <!-- SUBSTITUA O LINK ABAIXO PELO DO SEU EDITAL -->
-        <a class="btn btn-primary" href="Secretaria Estadual do Meio Ambiente.pdf" target="_blank" rel="noopener noreferrer" aria-label="Abrir o edital em nova aba">
+        <a class="btn btn-primary" href="processo seletivo.pdf" target="_blank" rel="noopener noreferrer" aria-label="Abrir o edital em nova aba">
           <!-- download icon -->
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 3v12m0 0l-4-4m4 4l4-4M4 21h16" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
           Abrir Edital (PDF)
