--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M7 7h10M7 12h10M7 17h6" stroke="white" stroke-width="2" stroke-linecap="round"/></svg>
         EDITAL DISPONÍVEL
       </span>
-      <h1 class="title">Portal da Secretaria do Meio Ambiente<br/>Para o Processo seletivo</h1>
+      <h1 class="title">Portal da Secretaria do Meio Ambiente<br/>Para o Concurso Público</h1>
       <p class="subtitle">Acesse o edital completo, e acompanhe tudo sobre a vaga</p>
       <div class="actions">
         <!-- SUBSTITUA O LINK ABAIXO PELO DO SEU EDITAL -->
